--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mm",
-  "version": "0.1.0",
+  "name": "VishnuWebsite",
+  "version": "2.0.0",
   "private": true,
   "homepage": "https://vishnugops.com",
   "dependencies": {
