--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "VishnuWebsite",
+  "name": "vg-website",
   "version": "2.0.0",
   "private": true,
   "homepage": "https://vishnugops.com",
