Added CNAME for custom websaite domain

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vg-website",
   "version": "2.0.1",
   "private": true,
-  "homepage": "https://www.vishnugops.com",
+  "homepage": "https://vishnugops.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
